--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.android.support:support-v4:23.4.0'
     testCompile 'junit:junit:4.12'
     compile 'com.yanzhenjie.nohttp:nohttp:1.1.2'
+    compile 'io.github.openfeign:feign-gson:9.5.0'
 }
