--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':customerview', ':toolbar', ':nohttp'
+include ':app', ':customerview', ':toolbar', ':nohttp', ':libs_PullToRefresh'
