--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.yanzhenjie.nohttp:nohttp:1.1.2'
     compile 'io.github.openfeign:feign-gson:9.5.0'
-
+    compile project(':libs_PullToRefresh')
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
