--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    sourceSets {
+        main {
+            jniLibs.srcDir 'libs'
+        }
+    }
 }
 
 dependencies {
@@ -24,12 +30,14 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile project(':libs_PullToRefresh')
     compile 'com.facebook.fresco:fresco:0.12.0'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
-    testCompile 'junit:junit:4.12'
     compile 'com.yanzhenjie.nohttp:nohttp:1.1.2'
     compile 'io.github.openfeign:feign-gson:9.5.0'
-    compile project(':libs_PullToRefresh')
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.android.support:design:23.4.0'
+    testCompile 'junit:junit:4.12'
+    compile files('libs/BaiduLBS_Android.jar')
 }
