--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':customerview', ':toolbar', ':nohttp', ':libs_PullToRefresh', ':百度地图de'
+include ':app', ':customerview', ':toolbar', ':nohttp', ':libs_PullToRefresh', ':百度地图de', ':myeventbus'
